[project]
name = "convert-file2pdf-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "boto3>=1.38.18",
    "minio>=7.2.0",
    "loguru>=0.7.3",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
    "pydantic",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
]
